Added tablet and mobile views

--- a/assets/LESS/index.less
+++ b/assets/LESS/index.less
@@ -13,12 +13,10 @@
 
 
 body {
-  max-width: 1000px;
+  max-width: 10000px;
   .width-100;
   color: @text-color;
-  //background-color: @bg-color;
   margin: 0 auto;
-  // .flex(center);
 }
 
 p {
@@ -35,3 +33,6 @@ section {
   margin: 60px 0;
 }
 
+.toggleDisplay {
+  display: none;
+}
