--- a/assets/LESS/variables.less
+++ b/assets/LESS/variables.less
@@ -7,3 +7,7 @@
 // fonts
 @header-font: 'Raleway', sans-serif;
 @text-font: 'Source Sans Pro' sans-serif;
+
+// Escapes
+@tablet: ~"(max-width: 800px)";
+@mobile: ~"(max-width: 500px)";
