--- a/assets/LESS/mid-content.less
+++ b/assets/LESS/mid-content.less
@@ -15,6 +15,10 @@
     h4 {
       //max-width: 33%;
     }
+
+    @media (width: 500px) {
+      display: block;
+    }
   }
   
   img {
@@ -28,23 +32,59 @@
 
   .imgList {
     .send, .peers, .instant {
+      .flex(space-between);
+      margin-bottom: 50px;
+
       h2 {
         font-size: 20px;
       }
-      .flex(space-between);
-      margin-bottom: 50px;
+      
       .send-img, .peers-img, .instant-img {
         width: 50%;
+
+        @media (max-width: 500px) {
+          width: 100%;
+        }
+      }
+
+      @media (max-width: 500px) {
+        display: block;
+        width: 100%;
       }
 
       .send-text, .peers-text, .instant-text {
         width: 50%;
         padding: 0 30px;
+
+        @media (max-width: 500px) {
+          width: 100%;
+        }
       }
     }
+
+    .peers {
+
+      @media (max-width: 500px) {
+        .flex(center, center, column-reverse);
+      }
+
+      .peers-text {
+        order: 0;
+      }
+    }
+
     img {
       //position: relative;
       width: 100%;
+
+      @media (max-width: 500px) {
+        width: 90%;
+        margin: 20px;
+      }
     }
+  }
+
+  @media (max-width: 500px) {
+    margin-top: 0;
   }
 }
