--- a/assets/LESS/top-content.less
+++ b/assets/LESS/top-content.less
@@ -1,7 +1,7 @@
 .top-content {
   .flex(space-around);
   margin-bottom: 20px;
-
+  
   .top-content-text {
     width: 50%;
     padding: 30px;
@@ -16,7 +16,7 @@
     }
 
     button {
-      width: 35%;
+      width: 160px;
       height: 40px;
       font-size: 15px;
       font-family: @header-font;
@@ -47,6 +47,10 @@
         color: @text-color;
       }
     }
+
+    @media (max-width: 500px) {
+      width: 100%;
+    }
   }
 
   .top-content-img {
@@ -56,6 +60,14 @@
     img {
       width: 100%;
       border-radius: 10px;
+
+      @media (max-width: 500px) {
+        display: none;
+      }
     }
+  }
+
+  @media (max-width: 500px) {
+    margin-top: 80px;
   }
 }
