--- a/assets/LESS/index.less
+++ b/assets/LESS/index.less
@@ -4,6 +4,7 @@
 @import './navBar';
 @import './top-content';
 @import './mid-content';
+@import './footer';
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
