--- a/assets/LESS/navBar.less
+++ b/assets/LESS/navBar.less
@@ -57,7 +57,7 @@ header {
     }
 
     @media (max-width: 500px) {
-      display: none;
+      //display: none;
       justify-content: center;
     }
   }
@@ -90,6 +90,15 @@ header {
       padding: 10px;
       right: 0px;
       top: 140px;
+    }
+  }
+
+  #link5 {
+    @media (max-width: 500px) {
+      position: fixed;
+      padding: 10px;
+      right: 0px;
+      top: 170px;
     }
   }
 }
