--- a/css/LESS/index.css
+++ b/css/LESS/index.css
@@ -198,7 +198,6 @@ header nav a:hover {
 }
 @media (max-width: 500px) {
   header nav {
-    display: none;
     justify-content: center;
   }
 }
@@ -229,6 +228,14 @@ header nav a:hover {
     padding: 10px;
     right: 0px;
     top: 140px;
+  }
+}
+@media (max-width: 500px) {
+  header #link5 {
+    position: fixed;
+    padding: 10px;
+    right: 0px;
+    top: 170px;
   }
 }
 .top-content {
@@ -422,6 +429,26 @@ header nav a:hover {
   .mid-content {
     margin-top: 0;
   }
+}
+.footer {
+  margin: 10px 0;
+  background-color: #49fcd4;
+}
+.footer footer nav {
+  width: 90%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  margin: 20px;
+}
+.footer footer nav a {
+  text-decoration-style: none;
+  text-decoration-line: none;
+  text-decoration-color: none;
+}
+.footer footer p {
+  text-align: center;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
