--- a/assets/LESS/navBar.less
+++ b/assets/LESS/navBar.less
@@ -1,31 +1,50 @@
 header {
-  .flex(space-between, baseline);
+  position: fixed;
+  top: 0;
+  left: 0;
+  //.flex(space-between, baseline);
   .width-100;
   background-color: @bg-color;
   //border-radius: 10px;
   margin-bottom: 20px;
 
-  span {
-    font-size: 30px;
-    padding: 30px;
-    font-family: @header-font;
+  .logo {
+    position: fixed;
+    width: 120px;
+    padding-left: 30px;
+    align-items: center;
+    //padding-top: 30px;
 
     @media (max-width: 800px) {
-      width: 100%;
+      width: 120px;
       justify-content: center;
       text-align: center;
       position: fixed;
       background-color: @bg-color;
+      left: 35%;
     }
   }
 
-  img {
-    position: fixed;
-    right: 5px;
-    cursor: pointer;
+  .menu-img {
+    background-color: @bg-color;
+    //display: none;
+
+    @media (max-width: 800px) {
+      position: fixed;
+      right: 5px;
+      cursor: pointer;
+    }
+
+    @media (max-width: 500px) {
+      position: fixed;
+      right: 5px;
+      cursor: pointer;
+    }
   }
 
   nav {
+    //position: fixed;
+    right: 0;
     .flex(flex-end);
 
     a {
@@ -53,7 +72,8 @@ header {
 
     @media (max-width: 800px) {
       width: 100%;
-      justify-content: center;
+      justify-content: space-between;
+      margin-top: 40px;
     }
 
     @media (max-width: 500px) {
