--- a/assets/LESS/top-content.less
+++ b/assets/LESS/top-content.less
@@ -1,15 +1,20 @@
 .top-content {
   .flex(space-around);
   margin-bottom: 20px;
-  
-  .top-content-text {
-    width: 50%;
-    padding: 30px;
 
+  .top-content-text {
     h1 {
+      display: block;
       font-size: 30px;
-      margin-bottom: 30px;
+      margin-bottom: 15px;
+      padding-left: 10px;
     }
+  }
+
+  .tip-receive {
+    display: flex;
+    width: 100%;
+    padding: 10px;
 
     h2 {
       margin-bottom: 10px;
@@ -27,6 +32,7 @@
 
     .tip {
       margin-bottom: 30px;
+      //width: 50%;
     }
 
     .give-tip {
@@ -36,6 +42,10 @@
         background-color: @text-color;
         color: white;
       }
+    }
+
+    .receive {
+      //width: 50%;
     }
 
     .receive-tip {
@@ -69,5 +79,9 @@
 
   @media (max-width: 500px) {
     margin-top: 80px;
+  }
+
+  @media (max-width: 800px) {
+    margin-top: 150px;
   }
 }
