--- a/assets/LESS/navBar.less
+++ b/assets/LESS/navBar.less
@@ -1,14 +1,12 @@
 header {
   position: fixed;
-  top: 0;
-  left: 0;
-  //.flex(space-between, baseline);
+  top: 0px;
   .width-100;
   background-color: @bg-color;
-  //border-radius: 10px;
   margin-bottom: 20px;
 
   .logo {
+    top: 20px;
     position: fixed;
     width: 120px;
     padding-left: 30px;
@@ -16,6 +14,7 @@ header {
     //padding-top: 30px;
 
     @media (max-width: 800px) {
+      top: 0;
       width: 120px;
       justify-content: center;
       text-align: center;
@@ -27,15 +26,10 @@ header {
 
   .menu-img {
     background-color: @bg-color;
-    //display: none;
+    display: none;
 
-    @media (max-width: 800px) {
-      position: fixed;
-      right: 5px;
-      cursor: pointer;
-    }
-
-    @media (max-width: 500px) {
+    @media (max-width: 550px) {
+      display: inline-block;
       position: fixed;
       right: 5px;
       cursor: pointer;
@@ -43,7 +37,6 @@ header {
   }
 
   nav {
-    //position: fixed;
     right: 0;
     .flex(flex-end);
 
@@ -60,8 +53,7 @@ header {
         color: @bg-color;
       }
 
-      @media (max-width: 500px) {
-        position: fixed;
+      @media (max-width: 550px) {
         padding: 10px;
         right: 0px;
         top: 40px;
@@ -76,7 +68,7 @@ header {
       margin-top: 40px;
     }
 
-    @media (max-width: 500px) {
+    @media (max-width: 550px) {
       //display: none;
       justify-content: center;
     }
@@ -87,7 +79,7 @@ header {
   }
 
   #link2 {
-    @media (max-width: 500px) {
+    @media (max-width: 550px) {
       position: fixed;
       padding: 10px;
       right: 0px;
@@ -96,7 +88,7 @@ header {
   }
 
   #link3 {
-    @media (max-width: 500px) {
+    @media (max-width: 550px) {
       position: fixed;
       padding: 10px;
       right: 0px;
@@ -105,7 +97,7 @@ header {
   }
 
   #link4 {
-    @media (max-width: 500px) {
+    @media (max-width: 550px) {
       position: fixed;
       padding: 10px;
       right: 0px;
@@ -114,11 +106,16 @@ header {
   }
 
   #link5 {
-    @media (max-width: 500px) {
+    @media (max-width: 550px) {
       position: fixed;
       padding: 10px;
       right: 0px;
       top: 170px;
     }
+  }
+
+  @media (max-width: 550px) {
+    height: 40px;
+    width: 100%;
   }
 }
