--- a/css/LESS/index.css
+++ b/css/LESS/index.css
@@ -136,13 +136,13 @@ body {
 }
 header {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0px;
   width: 100%;
   background-color: #49fcd4;
   margin-bottom: 20px;
 }
 header .logo {
+  top: 20px;
   position: fixed;
   width: 120px;
   padding-left: 30px;
@@ -150,6 +150,7 @@ header .logo {
 }
 @media (max-width: 800px) {
   header .logo {
+    top: 0;
     width: 120px;
     justify-content: center;
     text-align: center;
@@ -160,16 +161,11 @@ header .logo {
 }
 header .menu-img {
   background-color: #49fcd4;
+  display: none;
 }
-@media (max-width: 800px) {
+@media (max-width: 550px) {
   header .menu-img {
-    position: fixed;
-    right: 5px;
-    cursor: pointer;
-  }
-}
-@media (max-width: 500px) {
-  header .menu-img {
+    display: inline-block;
     position: fixed;
     right: 5px;
     cursor: pointer;
@@ -194,9 +190,8 @@ header nav a:hover {
   background-color: white;
   color: #49fcd4;
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   header nav a {
-    position: fixed;
     padding: 10px;
     right: 0px;
     top: 40px;
@@ -211,7 +206,7 @@ header nav a:hover {
     margin-top: 40px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   header nav {
     justify-content: center;
   }
@@ -221,7 +216,7 @@ header nav a:hover {
     flex-direction: column;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   header #link2 {
     position: fixed;
     padding: 10px;
@@ -229,7 +224,7 @@ header nav a:hover {
     top: 75px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   header #link3 {
     position: fixed;
     padding: 10px;
@@ -237,7 +232,7 @@ header nav a:hover {
     top: 110px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   header #link4 {
     position: fixed;
     padding: 10px;
@@ -245,7 +240,7 @@ header nav a:hover {
     top: 140px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   header #link5 {
     position: fixed;
     padding: 10px;
@@ -253,12 +248,18 @@ header nav a:hover {
     top: 170px;
   }
 }
+@media (max-width: 550px) {
+  header {
+    height: 40px;
+    width: 100%;
+  }
+}
 .top-content {
   display: flex;
   justify-content: space-around;
   align-items: none;
   flex-direction: row;
-  margin-bottom: 20px;
+  margin: 100px 0 20px 0;
 }
 .top-content .top-content-text h1 {
   display: block;
@@ -301,7 +302,7 @@ header nav a:hover {
   background-color: #49fcd4;
   color: #000000;
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .top-content .tip-receive {
     width: 100%;
   }
@@ -317,19 +318,27 @@ header nav a:hover {
   width: 100%;
   border-radius: 10px;
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .top-content .top-content-img img {
     display: none;
   }
 }
-@media (max-width: 500px) {
-  .top-content {
-    margin-top: 80px;
+@media (max-width: 800px) {
+  .top-content .top-content-img {
+    max-width: 100%;
+    width: 90%;
+    margin-left: 25px;
   }
 }
 @media (max-width: 800px) {
   .top-content {
     margin-top: 150px;
+    display: block;
+  }
+}
+@media (max-width: 550px) {
+  .top-content {
+    margin-top: 80px;
   }
 }
 .mid-content {
@@ -345,7 +354,7 @@ header nav a:hover {
   margin-bottom: 30px;
   border-radius: 10px;
 }
-@media (width: 500px) {
+@media (width: 550px) {
   .mid-content .mid-content-icons {
     display: block;
   }
@@ -382,7 +391,7 @@ header nav a:hover {
 .mid-content .imgList .instant .instant-img {
   width: 50%;
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .mid-content .imgList .send .send-img,
   .mid-content .imgList .peers .send-img,
   .mid-content .imgList .instant .send-img,
@@ -395,7 +404,7 @@ header nav a:hover {
     width: 100%;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .mid-content .imgList .send,
   .mid-content .imgList .peers,
   .mid-content .imgList .instant {
@@ -415,7 +424,7 @@ header nav a:hover {
   width: 50%;
   padding: 0 30px;
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .mid-content .imgList .send .send-text,
   .mid-content .imgList .peers .send-text,
   .mid-content .imgList .instant .send-text,
@@ -428,7 +437,7 @@ header nav a:hover {
     width: 100%;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .mid-content .imgList .peers {
     display: flex;
     justify-content: center;
@@ -442,13 +451,13 @@ header nav a:hover {
 .mid-content .imgList img {
   width: 100%;
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .mid-content .imgList img {
     width: 90%;
     margin: 20px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .mid-content {
     margin-top: 0;
   }
