--- a/assets/LESS/index.less
+++ b/assets/LESS/index.less
@@ -5,6 +5,7 @@
 @import './top-content';
 @import './mid-content';
 @import './footer';
+@import './testimonials';
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
