--- a/css/LESS/index.css
+++ b/css/LESS/index.css
@@ -482,6 +482,32 @@ header nav a:hover {
 .footer footer p {
   text-align: center;
 }
+.test .person {
+  border: 2px solid #49fcd4;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  max-width: 90%;
+  margin: 20px auto;
+}
+.test .person .person-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.test .person img {
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+.test .person p {
+  display: inline-block;
+  line-height: 2;
+}
+.test .person .person-text {
+  max-width: 20%;
+  margin-left: 20px;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
