--- a/assets/LESS/navBar.less
+++ b/assets/LESS/navBar.less
@@ -20,7 +20,7 @@ header {
       text-align: center;
       position: fixed;
       background-color: @bg-color;
-      left: 35%;
+      left: 38%;
     }
   }
 
@@ -69,13 +69,22 @@ header {
     }
 
     @media (max-width: 550px) {
-      //display: none;
+      display: none;
       justify-content: center;
     }
   }
 
   @media (max-width: 800px) {
     flex-direction: column;
+  }
+
+  #link1 {
+    @media (max-width: 550px) {
+      position: fixed;
+      padding: 10px;
+      right: 0px;
+      top: 40px;
+    }
   }
 
   #link2 {
@@ -112,6 +121,11 @@ header {
       right: 0px;
       top: 170px;
     }
+  }
+
+  @media (max-width: 800px) {
+    height: 140px;
+    width: 100%;
   }
 
   @media (max-width: 550px) {
