--- a/css/LESS/index.css
+++ b/css/LESS/index.css
@@ -156,7 +156,7 @@ header .logo {
     text-align: center;
     position: fixed;
     background-color: #49fcd4;
-    left: 35%;
+    left: 38%;
   }
 }
 header .menu-img {
@@ -208,12 +208,21 @@ header nav a:hover {
 }
 @media (max-width: 550px) {
   header nav {
+    display: none;
     justify-content: center;
   }
 }
 @media (max-width: 800px) {
   header {
     flex-direction: column;
+  }
+}
+@media (max-width: 550px) {
+  header #link1 {
+    position: fixed;
+    padding: 10px;
+    right: 0px;
+    top: 40px;
   }
 }
 @media (max-width: 550px) {
@@ -248,6 +257,12 @@ header nav a:hover {
     top: 170px;
   }
 }
+@media (max-width: 800px) {
+  header {
+    height: 140px;
+    width: 100%;
+  }
+}
 @media (max-width: 550px) {
   header {
     height: 40px;
@@ -259,7 +274,10 @@ header nav a:hover {
   justify-content: space-around;
   align-items: none;
   flex-direction: row;
-  margin: 100px 0 20px 0;
+  margin: 100px 20px 20px 20px;
+}
+.top-content .top-content-text {
+  width: 60%;
 }
 .top-content .top-content-text h1 {
   display: block;
@@ -267,8 +285,14 @@ header nav a:hover {
   margin-bottom: 15px;
   padding-left: 10px;
 }
+@media (max-width: 800px) {
+  .top-content .top-content-text {
+    width: 95%;
+  }
+}
 .top-content .tip-receive {
   display: flex;
+  justify-content: space-between;
   width: 100%;
   padding: 10px;
 }
@@ -286,6 +310,7 @@ header nav a:hover {
 }
 .top-content .tip-receive .tip {
   margin-bottom: 30px;
+  margin-right: 20px;
 }
 .top-content .tip-receive .give-tip {
   background-color: #49fcd4;
@@ -308,7 +333,7 @@ header nav a:hover {
   }
 }
 .top-content .top-content-img {
-  max-width: 50%;
+  max-width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -343,6 +368,11 @@ header nav a:hover {
 }
 .mid-content {
   width: 100%;
+  margin: 40px o;
+}
+.mid-content h2 {
+  background-color: #49fcd4;
+  border-radius: 10px;
 }
 .mid-content .mid-content-icons {
   display: flex;
@@ -351,8 +381,12 @@ header nav a:hover {
   flex-direction: row;
   background-color: #49fcd4;
   padding: 20px 0;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
   border-radius: 10px;
+}
+.mid-content .mid-content-icons img {
+  height: 120px;
+  margin-bottom: 10px;
 }
 @media (width: 550px) {
   .mid-content .mid-content-icons {
@@ -370,7 +404,7 @@ header nav a:hover {
 .mid-content .imgList .peers,
 .mid-content .imgList .instant {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: none;
   flex-direction: row;
   border-bottom: 3px dashed #49fcd4;
@@ -391,7 +425,7 @@ header nav a:hover {
 .mid-content .imgList .send .instant-img,
 .mid-content .imgList .peers .instant-img,
 .mid-content .imgList .instant .instant-img {
-  width: 50%;
+  max-width: 45%;
 }
 @media (max-width: 550px) {
   .mid-content .imgList .send .send-img,
@@ -403,6 +437,7 @@ header nav a:hover {
   .mid-content .imgList .send .instant-img,
   .mid-content .imgList .peers .instant-img,
   .mid-content .imgList .instant .instant-img {
+    max-width: 100%;
     width: 100%;
   }
 }
@@ -447,8 +482,20 @@ header nav a:hover {
     flex-direction: column-reverse;
   }
 }
+.mid-content .imgList .peers h2 {
+  max-width: 220px;
+  text-align: center;
+}
 .mid-content .imgList .peers .peers-text {
   order: 0;
+}
+.mid-content .imgList .instant h2 {
+  max-width: 330px;
+  text-align: center;
+}
+.mid-content .imgList .send h2 {
+  max-width: 260px;
+  text-align: center;
 }
 .mid-content .imgList img {
   width: 100%;
@@ -465,32 +512,39 @@ header nav a:hover {
   }
 }
 .footer {
+  bottom: 0;
+  height: 105px;
   margin: 0;
   background-color: #49fcd4;
 }
 .footer footer nav {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
-  margin: 20px;
+  margin-left: 0px;
 }
 .footer footer nav a {
   text-decoration-style: none;
   text-decoration-line: none;
   text-decoration-color: none;
+  color: #000000;
+  padding: 20px 20px;
+}
+.footer footer nav a:hover {
+  background-color: white;
+  color: #49fcd4;
 }
 .footer footer p {
   text-align: center;
+  padding: 10px;
 }
 .test h2 {
   font-size: 40px;
   font-family: 'Raleway', sans-serif;
   text-align: center;
-  padding-bottom: 40px;
-  margin-bottom: 40px;
-  border-bottom: 1px dashed black;
+  border-bottom: 3px dashed #49fcd4;
 }
 .test .person {
   border: 2px solid #49fcd4;
@@ -508,6 +562,7 @@ header nav a:hover {
 .test .person .person-img p {
   margin-right: 20px;
   line-height: 2;
+  padding-top: 20px;
 }
 .test .person img {
   border-radius: 50%;
@@ -517,8 +572,122 @@ header nav a:hover {
   line-height: 2;
 }
 .test .person .person-text {
-  max-width: 20%;
+  max-width: 400px;
   margin-left: 20px;
+}
+.about {
+  margin-top: 170px;
+}
+.about h1 {
+  text-align: center;
+  font-size: 50px;
+  background-color: #49fcd4;
+  border-radius: 10px;
+  max-width: 550px;
+  margin: auto;
+}
+.about h2 {
+  font-size: 40px;
+  text-align: center;
+  background-color: #49fcd4;
+  border-radius: 10px;
+  max-width: 320px;
+  margin: 0px auto;
+}
+.about .mission {
+  margin-bottom: 50px;
+  border-bottom: 3px dashed #49fcd4;
+}
+.about .mission p {
+  max-width: 800px;
+  margin: 40px auto;
+  text-align: justify;
+  line-height: 1.5;
+  font-size: 1.2rem;
+}
+.about .benefits h2 {
+  max-width: 230px;
+  margin: auto;
+}
+.about .test {
+  border-top: 3px dashed #49fcd4;
+}
+.about .test h2 {
+  margin: 60px auto;
+  border-bottom: 3px dashed #49fcd4;
+}
+.about .list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: baseline;
+  margin: 40px 20px;
+  max-width: 800px;
+  margin: 40px auto;
+}
+.about .list p {
+  text-align: justify;
+  line-height: 1.5;
+  font-size: 1.2rem;
+}
+@media (max-width: 550px) {
+  .about {
+    margin-top: 80px;
+  }
+}
+.team {
+  margin-top: 130px;
+}
+.team h1 {
+  text-align: center;
+  font-size: 50px;
+  background-color: #49fcd4;
+  border-radius: 10px;
+  width: 290px;
+  margin: auto;
+}
+.team h2 {
+  text-align: center;
+  font-size: 40px;
+  background-color: #49fcd4;
+  border-radius: 10px;
+  width: 250px;
+  margin: auto;
+}
+.team h4 {
+  text-align: center;
+}
+.team p {
+  text-align: center;
+  text-decoration-line: underline;
+}
+.team img {
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+.team .c-suite {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 80px auto;
+}
+.team .employees .workers-1 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 40px auto;
+}
+.team .employees .workers-2 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 40px auto;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -543,9 +712,9 @@ h6 {
   font-family: 'Raleway', sans-serif;
   margin-bottom: 10px;
 }
-section {
-  margin: 60px 0;
-}
 .toggleDisplay {
   display: none;
+}
+.toggleOn {
+  display: block;
 }
