Finished coding in a carousel on index.html

--- a/assets/LESS/index.less
+++ b/assets/LESS/index.less
@@ -4,6 +4,7 @@
 @import './navBar';
 @import './top-content';
 @import './mid-content';
+@import './carousel';
 @import './footer';
 @import './testimonials';
 @import './about.less';
