Fixed mobile view for the mid content icons

--- a/assets/LESS/carousel.less
+++ b/assets/LESS/carousel.less
@@ -23,6 +23,11 @@
       max-width: 400px;
       margin: 10px auto;
     }
+
+    img {
+      border-radius: 10px;
+      border: 2px solid @bg-color;
+    }
   }
 
   .peers {
