--- a/css/LESS/index.css
+++ b/css/LESS/index.css
@@ -377,138 +377,35 @@ header nav a:hover {
 .mid-content .mid-content-icons {
   display: flex;
   justify-content: space-evenly;
-  align-items: none;
+  align-items: center;
   flex-direction: row;
+  flex-wrap: wrap;
   background-color: #49fcd4;
   padding: 20px 0;
   margin-bottom: 60px;
   border-radius: 10px;
 }
+@media (max-width: 550px) {
+  .mid-content .mid-content-icons .icon {
+    margin: 0 auto;
+    width: 180px;
+    text-align: center;
+  }
+}
 .mid-content .mid-content-icons img {
   height: 120px;
   margin-bottom: 10px;
-}
-@media (width: 550px) {
-  .mid-content .mid-content-icons {
-    display: block;
-  }
-}
-.mid-content img {
   border-radius: 10px;
   border: 3px solid black;
 }
-.mid-content img:hover {
+.mid-content .mid-content-icons img:hover {
   background-color: white;
 }
-.mid-content .imgList .send,
-.mid-content .imgList .peers,
-.mid-content .imgList .instant {
-  display: flex;
-  justify-content: space-around;
-  align-items: none;
-  flex-direction: row;
-  border-bottom: 3px dashed #49fcd4;
-  padding-bottom: 40px;
-  margin-bottom: 50px;
-}
-.mid-content .imgList .send h2,
-.mid-content .imgList .peers h2,
-.mid-content .imgList .instant h2 {
-  font-size: 20px;
-}
-.mid-content .imgList .send .send-img,
-.mid-content .imgList .peers .send-img,
-.mid-content .imgList .instant .send-img,
-.mid-content .imgList .send .peers-img,
-.mid-content .imgList .peers .peers-img,
-.mid-content .imgList .instant .peers-img,
-.mid-content .imgList .send .instant-img,
-.mid-content .imgList .peers .instant-img,
-.mid-content .imgList .instant .instant-img {
-  max-width: 45%;
-}
 @media (max-width: 550px) {
-  .mid-content .imgList .send .send-img,
-  .mid-content .imgList .peers .send-img,
-  .mid-content .imgList .instant .send-img,
-  .mid-content .imgList .send .peers-img,
-  .mid-content .imgList .peers .peers-img,
-  .mid-content .imgList .instant .peers-img,
-  .mid-content .imgList .send .instant-img,
-  .mid-content .imgList .peers .instant-img,
-  .mid-content .imgList .instant .instant-img {
-    max-width: 100%;
-    width: 100%;
-  }
-}
-@media (max-width: 550px) {
-  .mid-content .imgList .send,
-  .mid-content .imgList .peers,
-  .mid-content .imgList .instant {
+  .mid-content .mid-content-icons {
     display: block;
-    width: 100%;
-  }
-}
-.mid-content .imgList .send .send-text,
-.mid-content .imgList .peers .send-text,
-.mid-content .imgList .instant .send-text,
-.mid-content .imgList .send .peers-text,
-.mid-content .imgList .peers .peers-text,
-.mid-content .imgList .instant .peers-text,
-.mid-content .imgList .send .instant-text,
-.mid-content .imgList .peers .instant-text,
-.mid-content .imgList .instant .instant-text {
-  width: 50%;
-  padding: 0 30px;
-}
-@media (max-width: 550px) {
-  .mid-content .imgList .send .send-text,
-  .mid-content .imgList .peers .send-text,
-  .mid-content .imgList .instant .send-text,
-  .mid-content .imgList .send .peers-text,
-  .mid-content .imgList .peers .peers-text,
-  .mid-content .imgList .instant .peers-text,
-  .mid-content .imgList .send .instant-text,
-  .mid-content .imgList .peers .instant-text,
-  .mid-content .imgList .instant .instant-text {
-    width: 100%;
-  }
-}
-@media (max-width: 550px) {
-  .mid-content .imgList .peers {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column-reverse;
-  }
-}
-.mid-content .imgList .peers h2 {
-  max-width: 220px;
-  text-align: center;
-}
-.mid-content .imgList .peers .peers-text {
-  order: 0;
-}
-.mid-content .imgList .instant h2 {
-  max-width: 330px;
-  text-align: center;
-}
-.mid-content .imgList .send h2 {
-  max-width: 260px;
-  text-align: center;
-}
-.mid-content .imgList img {
-  width: 100%;
-}
-@media (max-width: 550px) {
-  .mid-content .imgList img {
-    width: 90%;
-    margin: 20px;
-  }
-}
-@media (max-width: 550px) {
-  .mid-content {
-    margin-top: 0;
+    margin: 0 auto;
+    max-width: 400px;
   }
 }
 .carousel {
@@ -541,6 +438,12 @@ header nav a:hover {
 .carousel .instant p {
   max-width: 400px;
   margin: 10px auto;
+}
+.carousel .send img,
+.carousel .peers img,
+.carousel .instant img {
+  border-radius: 10px;
+  border: 2px solid #49fcd4;
 }
 .carousel .peers {
   display: none;
