--- a/assets/LESS/carousel.less
+++ b/assets/LESS/carousel.less
@@ -22,11 +22,19 @@
     p {
       max-width: 400px;
       margin: 10px auto;
+
+      @media (max-width: 550px) {
+        height: 50px;
+      }
     }
 
     img {
       border-radius: 10px;
       border: 2px solid @bg-color;
+
+      @media (max-width: 550px) {
+        height: 300px;
+      }
     }
   }
 
