--- a/assets/LESS/footer.less
+++ b/assets/LESS/footer.less
@@ -7,7 +7,6 @@
     nav {
       width: 100%;
       .flex(space-evenly, center);
-      //padding: 20px;
       margin-left: 0px;
 
       a {
@@ -21,11 +20,25 @@
           background-color: white;
           color: @bg-color;
         }
+
+        @media (max-width: 550px) {
+          display: block;
+          text-align: center;
+        }
+      }
+
+      @media (max-width: 550px) {
+        display: block;
       }
     }
+
     p {
       text-align: center;
       padding: 10px;
     }
+  }
+
+  @media (max-width: 550px) {
+    height: 330px;
   }
 }
