--- a/assets/LESS/top-content.less
+++ b/assets/LESS/top-content.less
@@ -63,7 +63,9 @@
     }
 
     @media (max-width: 550px) {
-      width: 100%;
+      display: block;
+      width: 90%;
+      margin: auto;
     }
   }
 
