--- a/css/LESS/index.css
+++ b/css/LESS/index.css
@@ -259,7 +259,7 @@ header nav a:hover {
 }
 @media (max-width: 800px) {
   header {
-    height: 140px;
+    height: 120px;
     width: 100%;
   }
 }
@@ -329,7 +329,9 @@ header nav a:hover {
 }
 @media (max-width: 550px) {
   .top-content .tip-receive {
-    width: 100%;
+    display: block;
+    width: 90%;
+    margin: auto;
   }
 }
 .top-content .top-content-img {
@@ -390,6 +392,7 @@ header nav a:hover {
     margin: 0 auto;
     width: 180px;
     text-align: center;
+    margin-bottom: 40px;
   }
 }
 .mid-content .mid-content-icons img {
@@ -439,11 +442,25 @@ header nav a:hover {
   max-width: 400px;
   margin: 10px auto;
 }
+@media (max-width: 550px) {
+  .carousel .send p,
+  .carousel .peers p,
+  .carousel .instant p {
+    height: 50px;
+  }
+}
 .carousel .send img,
 .carousel .peers img,
 .carousel .instant img {
   border-radius: 10px;
   border: 2px solid #49fcd4;
+}
+@media (max-width: 550px) {
+  .carousel .send img,
+  .carousel .peers img,
+  .carousel .instant img {
+    height: 300px;
+  }
 }
 .carousel .peers {
   display: none;
@@ -513,9 +530,25 @@ header nav a:hover {
   background-color: white;
   color: #49fcd4;
 }
+@media (max-width: 550px) {
+  .footer footer nav a {
+    display: block;
+    text-align: center;
+  }
+}
+@media (max-width: 550px) {
+  .footer footer nav {
+    display: block;
+  }
+}
 .footer footer p {
   text-align: center;
   padding: 10px;
+}
+@media (max-width: 550px) {
+  .footer {
+    height: 330px;
+  }
 }
 .test h2 {
   font-size: 40px;
@@ -575,37 +608,107 @@ header nav a:hover {
   margin-bottom: 50px;
   border-bottom: 3px dashed #49fcd4;
 }
+@media (max-width: 550px) {
+  .about .mission h1 {
+    max-width: 80%;
+    margin: 20px auto;
+  }
+}
 .about .mission p {
-  max-width: 800px;
+  max-width: 540px;
   margin: 40px auto;
   text-align: justify;
   line-height: 1.5;
   font-size: 1.2rem;
+}
+@media (max-width: 550px) {
+  .about .mission p {
+    max-width: 80%;
+    margin: 20px auto;
+  }
 }
 .about .benefits h2 {
   max-width: 230px;
   margin: auto;
 }
+.about .benefits .list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: baseline;
+  margin: 40px 20px;
+  max-width: 700px;
+  margin: 40px auto;
+}
+.about .benefits .list img {
+  margin: 0 20px;
+}
+.about .benefits .list p {
+  text-align: justify;
+  line-height: 1.5;
+  font-size: 1.2rem;
+  max-width: 400px;
+  margin-right: 30px;
+}
 .about .test {
   border-top: 3px dashed #49fcd4;
 }
 .about .test h2 {
+  padding: 0;
   margin: 60px auto;
   border-bottom: 3px dashed #49fcd4;
 }
-.about .list {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: baseline;
-  margin: 40px 20px;
-  max-width: 800px;
-  margin: 40px auto;
+@media (max-width: 550px) {
+  .about .test h4 {
+    width: 200px;
+    text-align: center;
+  }
 }
-.about .list p {
-  text-align: justify;
-  line-height: 1.5;
-  font-size: 1.2rem;
+.about .test p {
+  margin: 0 auto;
+}
+@media (max-width: 550px) {
+  .about .test p {
+    text-align: center;
+  }
+}
+.about .test .person {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.about .test .person .person-img {
+  display: block;
+}
+.about .test .person .person-img h4 {
+  padding: 0;
+  text-align: center;
+}
+.about .test .person .person-img p {
+  margin: 0;
+  padding: 0 0 20px 0;
+  text-align: center;
+}
+@media (max-width: 800px) {
+  .about .test .person .person-img {
+    width: 200px;
+    text-align: center;
+  }
+}
+.about .test .person .person-text {
+  margin: 0 auto;
+}
+@media (max-width: 800px) {
+  .about .test .person .person-text p {
+    padding: 20px;
+  }
+}
+@media (max-width: 550px) {
+  .about .test .person .person-text p {
+    border-top: 2px dashed #49fcd4;
+  }
 }
 @media (max-width: 550px) {
   .about {
