--- a/assets/LESS/mid-content.less
+++ b/assets/LESS/mid-content.less
@@ -17,7 +17,7 @@
 
     .icon {
       @media (max-width: 550px) {
-        margin: 0 auto;
+        margin: 40px auto;
         width: 180px;
         text-align: center;
         margin-bottom: 40px;
