--- a/assets/LESS/navBar.less
+++ b/assets/LESS/navBar.less
@@ -9,7 +9,7 @@ header {
     top: 20px;
     position: fixed;
     width: 120px;
-    padding-left: 30px;
+    padding: 0 10px;
     align-items: center;
     //padding-top: 30px;
 
@@ -50,7 +50,7 @@ header {
 
       &:hover {
         background-color: white;
-        color: @bg-color;
+        color: darkcyan;
       }
 
       @media (max-width: 550px) {
@@ -92,7 +92,7 @@ header {
       position: fixed;
       padding: 10px;
       right: 0px;
-      top: 75px;
+      top: 76px;
     }
   }
 
@@ -101,7 +101,7 @@ header {
       position: fixed;
       padding: 10px;
       right: 0px;
-      top: 110px;
+      top: 112px;
     }
   }
 
@@ -110,7 +110,7 @@ header {
       position: fixed;
       padding: 10px;
       right: 0px;
-      top: 140px;
+      top: 148px;
     }
   }
 
@@ -119,12 +119,12 @@ header {
       position: fixed;
       padding: 10px;
       right: 0px;
-      top: 170px;
+      top: 184px;
     }
   }
 
   @media (max-width: 800px) {
-    height: 120px;
+    height: 116px;
     width: 100%;
   }
 
